# splitspace-demo

./: .gitignore  CMakeLists.txt  README.md  install-splitspace.sh
data/: main.json
data/materials/: demoMaterials.json
data/meshes/: suzanne.3ds
data/scenes/: demoScene.json
data/shaders/: basic.fs  basic.vs  deffered1.fs  deffered1.vs  demoShaders.json  splitspace.glsl
src/: main.cpp
